test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/compare_void_to_other_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  void
  *
  identifier(ptr)
  =
  (
  void
  *
  )
  identifier(arr)
  ;
  return
  identifier(ptr)
  <
  identifier(arr)
  +
  const int(1)
  ;
  }
